--- a/package.json
+++ b/package.json
@@ -1,27 +1,31 @@
 {
-  "name": "_bourbon",
-  "version": "1.0.0",
-  "description": "_bourbon",
+  "name": "html bourbon",
+  "version": "2.0.0",
+  "description": "html bourbon",
   "main": "gulpfile.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Marcel Badua",
-  "license": "ISC",
+  "dependencies": {},
   "devDependencies": {
-    "browser-sync": "^2.9.3",
-    "gulp": "^3.9.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-cssmin": "^0.1.7",
+    "bourbon": "^5.0.0",
+    "browser-sync": "^2.23.6",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-cssmin": "^0.2.0",
     "gulp-jquery-closure": "^1.1.1",
-    "gulp-load-plugins": "^1.0.0-rc.1",
-    "gulp-notify": "^2.2.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-sass": "^2.2.0",
-    "gulp-uglify": "^1.4.1",
-    "gulp-util": "^3.0.6",
-    "node-bourbon": "^4.2.3",
-    "node-neat": "^1.7.2",
-    "node-normalize-scss": "^1.1.1"
-  }
+    "gulp-load-plugins": "^1.5.0",
+    "gulp-notify": "^3.2.0",
+    "gulp-plumber": "^1.2.0",
+    "gulp-sass": "^3.1.0",
+    "gulp-uglify": "^3.0.0",
+    "gulp-util": "^3.0.8",
+    "node-normalize-scss": "^3.0.0"
+  },
+  "scripts": {
+    "test": "gulp serve"
+  },
+  "repository": {
+    "type": "git",
+    "url": "none"
+  },
+  "author": "",
+  "license": "ISC"
 }
