--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "html bourbon",
+  "name": "html-bourbon",
   "version": "2.0.0",
   "description": "html bourbon",
   "main": "gulpfile.js",
