--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
   "name": "html-bourbon",
-  "version": "2.0.0",
-  "description": "html bourbon",
+  "version": "2.0.5",
+  "description": "An HTML Boilerplate using bourbon",
   "main": "gulpfile.js",
-  "dependencies": {
-    "gulp-imagemin": "^4.1.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "bourbon": "^5.0.0",
     "browser-sync": "^2.23.6",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-cssmin": "^0.2.0",
+    "gulp-imagemin": "^4.1.0",
     "gulp-jquery-closure": "^1.1.1",
     "gulp-load-plugins": "^1.5.0",
     "gulp-notify": "^3.2.0",
@@ -26,8 +25,8 @@
   },
   "repository": {
     "type": "git",
-    "url": "none"
+    "url": "https://github.com/marcelbadua/html-bourbon"
   },
-  "author": "",
+  "author": "Marcel Badua",
   "license": "ISC"
 }
