--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
   "name": "html-bourbon",
-  "version": "2.0.5",
+  "version": "2.0.6",
   "description": "An HTML Boilerplate using bourbon",
   "main": "gulpfile.js",
   "dependencies": {},
   "devDependencies": {
-    "ansi-colors": "^3.2.4",
-    "autoprefixer": "^9.5.0",
-    "beeper": "^1.1.1",
-    "bourbon": "^5.1.0",
-    "browser-sync": "^2.26.7",
-    "cssnano": "^4.1.10",
-    "fancy-log": "^1.3.3",
-    "gulp": "^4.0.0",
-    "gulp-concat-util": "^0.5.5",
-    "gulp-plumber": "^1.2.1",
-    "gulp-postcss": "^8.0.0",
-    "gulp-rename": "^1.4.0",
-    "gulp-sass": "^4.0.2",
-    "gulp-uglify": "^3.0.2"
+    "ansi-colors": "latest",
+    "autoprefixer": "latest",
+    "beeper": "latest",
+    "bourbon": "latest",
+    "browser-sync": "latest",
+    "cssnano": "latest",
+    "fancy-log": "latest",
+    "gulp": "latest",
+    "gulp-concat-util": "latest",
+    "gulp-plumber": "latest",
+    "gulp-postcss": "latest",
+    "gulp-rename": "latest",
+    "gulp-sass": "latest",
+    "gulp-uglify": "latest"
   },
   "scripts": {
     "test": "gulp serve"
